<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270sp"
    android:layout_height="wrap_content"
    android:padding="10sp">

    <TextView
        android:id="@+id/report_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/reportTitle"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/report_radioG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_title_tv">

        <RadioButton
            android:id="@+id/report_rbtn_c0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/report1" />

        <RadioButton
            android:id="@+id/report_rbtn_c1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/report2" />

        <RadioButton
            android:id="@+id/report_rbtn_c2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/report3" />

        <RadioButton
            android:id="@+id/report_rbtn_c3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/report4" />

        <RadioButton
            android:id="@+id/report_rbtn_c4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:text="@string/extra" />
    </RadioGroup>

    <EditText
        android:id="@+id/report_c_et"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_box_line"
        android:hint="@string/inputCon"
        android:padding="5sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_radioG" />

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/report_c_et"
        app:layout_constraintTop_toBottomOf="@id/report_c_et">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:id="@+id/report_cancel_btn"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:id="@+id/report_ok_btn"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>