<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/pin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realBlock"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/realblock2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/realblock3"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:background="@drawable/round_btn_gray"
            android:layout_marginRight="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:background="@drawable/round_btn_darkgreen"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>